infra/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-soc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.my-soc.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
    - host: iris.my-soc.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iriswebapp-app
                port:
                  number: 8000
    - host: kibana.my-soc.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
    - host: demo.my-soc.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - prometheus.my-soc.fr
        - iris.my-soc.fr
        - kibana.my-soc.fr
        - demo.my-soc.fr
      secretName: ingress-tls
